--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -37,7 +37,7 @@
     <body>
 
         {% set host = getHost() %}
-        {% if lang is not defined %}{% set lang = default_lang %}{% endif %}
+        {% if lang is not defined %}{% set lang = app.request.locale %}{% endif %}
         {% if page is not defined %}{% set menu = getMenu(host.id, lang, 'main', 2, null, 1) %}
         {% else %}{% set menu = getMenu(host.id, lang, 'main', 2, page.id, 1) %}
         {% endif %}
