--- a/Resources/views/Admin/datatype/checkbox.html.twig
+++ b/Resources/views/Admin/datatype/checkbox.html.twig
@@ -1,1 +1,1 @@
-{% if attribute.value %}<span class="textline">{{ attribute.value['value'] }}</span>{% endif %}
+{% if attribute.value %}<span class="textline">{% if attribute.value['value'] is defined %}{{ attribute.value['value'] }}{% endif %}</span>{% endif %}
