--- a/Resources/views/Admin/datatype/textline.html.twig
+++ b/Resources/views/Admin/datatype/textline.html.twig
@@ -1,1 +1,1 @@
-{% if attribute.value %}<span class="textline">{{ attribute.value['value'] }}</span>{% endif %}
+{% if attribute.value %}<span class="textline">{{ attribute.value['value'] }}</span><br/>{% endif %}
