--- a/Resources/views/Index/datatype/checkbox.html.twig
+++ b/Resources/views/Index/datatype/checkbox.html.twig
@@ -1,1 +1,1 @@
-To be done
+{% trans %}Is checked{% endtrans %}: {% if attribute.value['value'] is defined %}{% trans %}Yes{% endtrans %}{% else %}{% trans %}No{% endtrans %}{% endif %}
