--- a/Resources/views/Index/datatype/link.html.twig
+++ b/Resources/views/Index/datatype/link.html.twig
@@ -3,5 +3,4 @@
 {% if attribute.value.page_id is defined %}{% set url = path('majes_cms_' ~ attribute.value.page_id ~  '_' ~ lang) %}
 {% else %}{% set url = attribute.value.value %}{% endif %}
                 
-
-<span class="mjcms_link"><a href="{{ url }}" target="{{attribute.value.target}}">{{ attribute.value.label }}</a>{% endif %}</span>{% endif %}
+{% if container == true %}<span class="mjcms_link">{% endif %}<a href="{{ url }}" target="{{attribute.value.target}}">{{ attribute.value.label }}</a>{% endif %}{% if container == true %}</span>{% endif %}{% endif %}
