--- a/Resources/views/Index/datatype/textarea.html.twig
+++ b/Resources/views/Index/datatype/textarea.html.twig
@@ -1,1 +1,1 @@
-{% if attribute.value %}<div class="mjcms_textarea">{{ attribute.value['value']|nl2br }}</div>{% endif %}
+{% if attribute.value %}{% if container == true %}<div class="mjcms_textarea">{% endif %}{{ attribute.value['value']|nl2br }}{% if container == true %}</div>{% endif %}{% endif %}
