share feature is not yet implemented

--- a/Resources/views/Admin/parts/actions.html.twig
+++ b/Resources/views/Admin/parts/actions.html.twig
@@ -19,7 +19,7 @@
                 </ul>
                 {% endif %}
               </div>
-          <div class="btn-group">
+          <!--<div class="btn-group">
               <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                 <i class="icon-thumbs-up"></i> {% trans %}Share{% endtrans %}<span class="caret"></span></button>
                 <ul class="dropdown-menu">
@@ -33,7 +33,7 @@
                     <a href="#"><i class="icon-envelope"></i> Email</a>
                   </li>
                 </ul>
-            </div>
+            </div>-->
         
         <div class="btn-group pull-right">
               <button class="btn btn-info dropdown-toggle" data-toggle="dropdown">
