Fixin date attribute
Signed-off-by: BabarMajes <al@neomajes.com>

--- a/Resources/views/Admin/datatype/form/date.html.twig
+++ b/Resources/views/Admin/datatype/form/date.html.twig
@@ -6,7 +6,6 @@
 </div>
 <script>
 $('input#{{attribute.block_attribute_ref}}').datepicker({
-    format: "yyyy-mm-dd 00:00:00",
-    autoclose: true
+    dateFormat: "yy-mm-dd"
 });
 </script>
