--- a/Resources/views/Admin/datatype/listboxmultiple.html.twig
+++ b/Resources/views/Admin/datatype/listboxmultiple.html.twig
@@ -3,7 +3,7 @@
 	<span class="textline">
 		{% set list = getListbox(attribute.block_attribute_setup) %}
 			{% for item in list.content %}
-	        	{% if item.key == attribute.value.value %}{{item.value}}{% endif %}
+	        	{% if item.key in attribute.value.value %}{{item.value}}{% endif %}
 	        {% endfor %}
 	</span><br/>
 {% endspaceless %}
