--- a/Resources/views/Admin/datatype/form/internallink.html.twig
+++ b/Resources/views/Admin/datatype/form/internallink.html.twig
@@ -2,13 +2,13 @@
     <label class="control-label col-lg-3">{{attribute.title}}</label>
     <div class="col-lg-9">
         <select class="form-control" name="attributes[{{attribute.block_attribute_ref}}][value]" id="{{attribute.block_attribute_ref}}" value="{% if attribute.value %}{{attribute.value.value}}{% endif %}" style="padding:0;border:none;">
-        	{% set list = getListbox(attribute.block_attribute_setup) %}
-        	{% for item in list.content %}
-        		<option value="{{item.key}}" {% if (attribute.value) and (attribute.value.value == item.key) %}selected{% endif %}>{{item.value}}</option>
-        	{% endfor %}
+          {% set routes = getRoutes() %}
+          {% for route in routes %}
+            <option value="{{ route.url }}" {% if (attribute.value) and (attribute.value.value == route.url) %}selected{% endif %}>{{route.title}}</option>
+          {% endfor %}
         </select>
     </div>
 </div>
 <script>
-	$('select#{{attribute.block_attribute_ref}}').select2();
+  $('select#{{attribute.block_attribute_ref}}').select2();
 </script>
